# Server

./: .directory  CMakeLists.txt  HouseControl_service  Server_service
libgpio/: CMakeLists.txt
libgpio/include/: gpio.h
libgpio/lib/: CMakeLists.txt  gpio.c
librsa/include/: rsa.h
librsa/lib/: CMakeLists.txt  rsa.c
main/: CMakeLists.txt  server.c  server_test.c
main/include/: consts.h
main/src/: CMakeLists.txt  server.c
